# log-analyzer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.json  pyproject.toml  report_template.html
.github/workflows/: ci.yml
src/log_analyzer/: __init__.py  analyzer.py  config.py  log_file_finder.py  logger.py  main.py  report.py  schemas.py
tests/: test_analyzer.py  test_config.py
